# hexagonal-python

./: .env.make  .gitignore  Makefile  README.md  coverage.txt
app/: .pylintrc  pyproject.toml
app/features/: environment.py
app/features/core/: di.feature  di_command_bus.feature  di_query_bus.feature
app/features/steps/: di.py  di_command_bus.py  di_query_bus.py
app/src/: __init__.py  config.py  consume.py  main.py
app/src/core/broker/: broker.py  kafka.py  rabbitmq.py
app/src/core/cqrs/: async_kafka_bus.py  async_protocol.py  async_rabbitmq_bus.py  bus.py  command_bus.py  command_handler.py  di_command_bus.py  di_query_bus.py  exceptions.py  handler.py  query.py  query_bus.py  query_handler.py  simple_command_bus.py  simple_query_bus.py  types.py
app/src/core/cqrs/command/: __init__.py  command.py  command_bus.py  command_handler.py  types.py
app/src/core/cqrs/command/bus/: __init__.py  di_command_bus.py  kafka_command_bus.py  rabbitmq_command_bus.py  simple_command_bus.py
app/src/core/cqrs/query/: __init__.py  query_bus.py  query_handler.py  types.py
app/src/core/cqrs/query/bus/: __init__.py  di_query_bus.py  (+3 more)
app/src/core/di/: __init__.py  container.py  exceptions.py  inject.py
app/src/example/domain/command/: example_command.py  example_handler.py
app/src/example/domain/query/: example_handler.py  example_query.py  example_response.py
app/src/example/infrastructure/cli/: main.py
app/tests/unit/: test_container.py  test_di_command_bus.py  test_di_query_bus.py  test_dummy.py  test_simple_command_bus.py  test_simple_query_bus.py
(+6 files in other folders)
