[tool.poetry]
name = "src"
version = "0.1.0"
description = "App template"
authors = ["Me"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
aioamqp = "^0.15.0"
kafka-python = {git = "https://github.com/dpkp/kafka-python.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
behave = "^1.2.6"
pylint = "^3.3.1"
black = "^24.10.0"
pyright = "^1.1.388"
coverage = "^7.6.4"


[tool.poetry.group.test.dependencies]
behave = "^1.2.6"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
